objects/Account.object
<CustomObject>
    <fields>
        <fullName>Domain__c</fullName>
        <formula>IF(CONTAINS(
  SUBSTITUTE(
    SUBSTITUTE(
      SUBSTITUTE(
        LOWER(
          RIGHT(Website,LEN(Website)-FIND(&apos;@&apos;,Website))
        )
      , &quot;http://&quot;,&quot;&quot;),
    &quot;https://&quot;,&quot;&quot;),
  &quot;www.&quot;,&quot;&quot;),&quot;/&quot;),

LEFT(SUBSTITUTE(
    SUBSTITUTE(
      SUBSTITUTE(
        LOWER(
          RIGHT(Website,LEN(Website)-FIND(&apos;@&apos;,Website))
        )
      , &quot;http://&quot;,&quot;&quot;),
    &quot;https://&quot;,&quot;&quot;),
  &quot;www.&quot;,&quot;&quot;),

FIND(&quot;/&quot;,SUBSTITUTE(
    SUBSTITUTE(
      SUBSTITUTE(
        LOWER(
          RIGHT(Website,LEN(Website)-FIND(&apos;@&apos;,Website))
        )
      , &quot;http://&quot;,&quot;&quot;),
    &quot;https://&quot;,&quot;&quot;),
  &quot;www.&quot;,&quot;&quot;))-1)


,SUBSTITUTE(
    SUBSTITUTE(
      SUBSTITUTE(
        LOWER(
          RIGHT(Website,LEN(Website)-FIND(&apos;@&apos;,Website))
        )
      , &quot;http://&quot;,&quot;&quot;),
    &quot;https://&quot;,&quot;&quot;),
  &quot;www.&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Potential__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Account to be treated as Gold/Platinum for assignment?</inlineHelpText>
        <label>High Potential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Level_Calculated__c</fullName>
        <defaultValue>&apos;None&apos;</defaultValue>
        <inlineHelpText>The calculated Partner Level determined by sales and certifications</inlineHelpText>
        <label>Partner Level - Calculated</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Level_Overwritten__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the Partner Level overwriting the calculated Partner Level?</inlineHelpText>
        <label>Partner Level Overwritten?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Level__c</fullName>
        <description>Imported from Workbench</description>
        <label>Partner Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Level_atQuarter__c</fullName>
        <defaultValue>&apos;None&apos;</defaultValue>
        <label>Partner Level atQuarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Portal__c</fullName>
        <inlineHelpText>Partner Portal URL for the Account</inlineHelpText>
        <label>Partner Portal</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promote_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have the territory assignment rules treat this Account as Gold/Platinum?</inlineHelpText>
        <label>Promote Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StcZone_Global_Region__c</fullName>
        <label>Global Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Global_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StcZone_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StcZone_Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <description>This field will now only be populated by the Lead conversion process and it is therefore only valid to reference it on an INSERT of an Account object where it will initially set the transactionTypes__c field (SSF-458). At all other times, the transactionTypes__c/transactionTypesAsText__c fields should be used.</description>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Both MSP and VAR</fullName>
                </value>
                <value>
                    <fullName>Business User</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>Direct Market Reseller (DMR)</fullName>
                </value>
                <value>
                    <fullName>Distribution Partner</fullName>
                </value>
                <value>
                    <fullName>Distributors Partner Reseller</fullName>
                </value>
                <value>
                    <fullName>Home User</fullName>
                </value>
                <value>
                    <fullName>Managed Service Provider (MSP)</fullName>
                </value>
                <value>
                    <fullName>Original Equipment Manufacturer (OEM)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Press / Media Evaluator</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Trial User</fullName>
                </value>
                <value>
                    <fullName>Value Added Reseller (VAR)</fullName>
                </value>
                <value>
                    <fullName>International Master Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAR_Agreement_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Application Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>transactionTypesAsText__c</fullName>
        <description>This is a text version of the Multi-Picklist transactionTypes__c field that can be used in formulae. It is not intended to be displayed or updated directly.</description>
        <label>Transaction Types (text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transactionTypes__c</fullName>
        <inlineHelpText>Some of the Transaction Types will be automatically managed depending on any Agreements in place</inlineHelpText>
        <label>Transaction Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>transactionTypes</valueSetName>
        </valueSet>
    </fields>
</CustomObject>